# WorkFlow_Executor

./: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Count.h  Dump.h  Factory.cpp  Factory.h  Grep.cpp  Grep.h  IWorker.cpp  IWorker.h  ReadFile.h  Replace.h  Sort.h  WorkflowExecutor.cpp  WorkflowExecutor.h  WriteFile.h  main.cpp
bad/: in.txt
good/: conf.txt  in3_1.txt  in5.txt  out1.txt  out2.txt  out3_1.txt  out3_2.txt
